# tabling-cli

./: .gitignore  AGENT_DX_EVALUATION.md  LICENSE  README.md  SKILL.md  pyproject.toml
src/tabling_cli/: __main__.py  cli.py  client.py  config.py  models.py  output.py  schema.py  validate.py
src/tabling_cli/commands/: brands.py  curations.py  search.py  shop.py  waitlist.py
