[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tabling-cli"
version = "0.1.0"
description = "테이블링 비공식 CLI — AI 에이전트 친화적 설계 (Agent DX)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "tellang" }]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "pydantic>=2",
    "pydantic-settings>=2",
]

[project.scripts]
tabling = "tabling_cli.cli:app"

[project.urls]
Repository = "https://github.com/tellang/tabling-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/tabling_cli"]
